w3 分組合作報告Github倉儲和網站

--- a/config/content.htm
+++ b/config/content.htm
@@ -389,7 +389,11 @@ for i in range(z):
     walk_two_line()
 if x % 2 != 0:
     r.move(steps)</pre>
-<h1 id="brython_div2">w3</h1>
+<h1>w3</h1>
+<p>Github:</p>
+<p><a href="https://github.com/41423222/w3_team_ppt">https://github.com/41423222/w3_team_ppt</a></p>
+<p>網站:</p>
+<p><a href="https://41423222.github.io/w3_team_ppt/">https://41423222.github.io/w3_team_ppt/</a></p>
 <p>
 <script>
 function getUrlParam(key) {
