--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -389,7 +389,7 @@ for i in range(z):
     walk_two_line()
 if x % 2 != 0:
     r.move(steps)</pre>
-<div id="brython_div2"></div>
+<h1 id="brython_div2">w3</h1>
 <p>
 <script>
 function getUrlParam(key) {
