--- a/content/w3.html
+++ b/content/w3.html
@@ -143,6 +143,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w2 << <a href='w2.html'>Previous</a> <br /><h1>w3</h1>
+<p>Github:</p>
+<p><a href="https://github.com/41423222/w3_team_ppt">https://github.com/41423222/w3_team_ppt</a></p>
+<p>網站:</p>
+<p><a href="https://41423222.github.io/w3_team_ppt/">https://41423222.github.io/w3_team_ppt/</a></p>
 <p>
 <script>
 function getUrlParam(key) {
