--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,4 +1,4 @@
-<h1>About</h1>
+<p>About</p>
 <p>課程名稱: 計算機程式</p>
 <p>課程評分:</p>
 <p style="padding-left: 30px;"><span style="background-color: #ffff00;">學習心得報告 (60%)</span> - MS Teams 線上參與，<span style="background-color: #ccffcc;">6人一組</span>每三週發表學習心得。</p>
@@ -619,9 +619,8 @@ r.turn_left()
 r.move(5)
 r.turn_left()
 r.move(9)</pre>
-<p></p>
 <h1>w7 1b</h1>
-<h2>從(1,1)走到中間畫2x2正方形</h2>
+<h2>走2x2正方形</h2>
 <p>
 <script>
 function getUrlParam(key) {
