--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -816,6 +816,7 @@ for i in range(4):
     turn_right()
     r.move(1)</pre>
 <h2>走斜線</h2>
+<p>用走斜線的程式碼讓機器人走出6x6的直角三角形</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">from browser import document, html, timer
 
 CELL_SIZE = 40
