--- a/content/w7 1b.html
+++ b/content/w7 1b.html
@@ -143,7 +143,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w6 << <a href='w6.html'>Previous</a> <a href='走2x2正方形.html'>Next</a> >> 走2x2正方形<br /><h1>w7 1b</h1>
-<br />w6 << <a href='w6.html'>Previous</a> <a href='走2x2正方形.html'>Next</a> >> 走2x2正方形</div>
+<p>這裡什麼都沒有</p>
+<p>請點擊下面小標題開啟相關題目</p><br />w6 << <a href='w6.html'>Previous</a> <a href='走2x2正方形.html'>Next</a> >> 走2x2正方形</div>
         
     <!-- footer -->
       <div class="container">
